[package]
name = "sand-toy"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.6.0", features = ["stm32f407vg", "time-driver-tim2", "exti"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
